--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,1 +1,9 @@
+
 @import 'tailwindcss';
+@import 'primeicons/primeicons.css';
+
+
+:root {
+    --base-color : #2f3192;
+    --logo-text-color : #ed1d25;
+}
