--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,6 +4,7 @@
 
 
 :root {
-    --base-color : #2f3192;
+    --base-color : #161866;
     --logo-text-color : #ed1d25;
+    --light-color : #e3eeff;
 }
